--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,7 +23,7 @@ $blue: #268bd2 !default;
 $brown: #8f5536 !default;
 $purple: #9f7aea !default;
 
-$root-font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', Arial, sans-serif !default;
+$root-font-family: 'IBM Plex Sans', Arial, sans-serif !default;
 $root-font-size: 1rem !default;
 $root-line-height: 1.5 !default;
 
@@ -70,6 +70,105 @@ $sidebar-icon-color: rgba($sidebar-fg-color, 0.85) !default;
 }
 
 @import "hydeout";
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap');
+
+
+// code highlighting
+
+.highlight {
+  background-color: #263239;
+}
+
+.highlight .hll { background-color: #ffc; }
+.highlight .c { color: #999; } /* Comment */
+.highlight .err { /* Error */
+  background-color: #faa;
+  color: #a00;
+}
+.highlight .k { color: #A77FC6; } /* Keyword */
+.highlight .o { color: #E9EDED; } /* Operator */
+.highlight .cm { /* Comment.Multiline */
+  color: #09f;
+  font-style: italic;
+}
+.highlight .cp { color: #099; } /* Comment.Preproc */
+.highlight .c1 { color: #999; } /* Comment.Single */
+.highlight .cs { color: #999; } /* Comment.Special */
+.highlight .gd { /* Generic.Deleted */
+  background-color: #fcc;
+  border: 1px solid #c00;
+}
+.highlight .ge { font-style: italic; } /* Generic.Emph */
+.highlight .gr { color: #f00; } /* Generic.Error */
+.highlight .gh { color: #030; } /* Generic.Heading */
+.highlight .gi { /* Generic.Inserted */
+  background-color: #cfc;
+  border: 1px solid #0c0;
+}
+.highlight .go { color: #aaa; } /* Generic.Output */
+.highlight .gp { color: #009; } /* Generic.Prompt */
+// .highlight .gs { } /* Generic.Strong */
+.highlight .gu { color: #030; } /* Generic.Subheading */
+.highlight .gt { color: #9c6; } /* Generic.Traceback */
+.highlight .kc { color: #A77FC6; } /* Keyword.Constant */
+.highlight .kd { color: #A77FC6; } /* Keyword.Declaration */
+.highlight .kn { color: #A77FC6; } /* Keyword.Namespace */
+.highlight .kp { color: #A77FC6; } /* Keyword.Pseudo */
+.highlight .kr { color: #A77FC6; } /* Keyword.Reserved */
+.highlight .kt { color: #078; } /* Keyword.Type */
+.highlight .m { color: #f60; } /* Literal.Number */
+.highlight .s { color: #d44950; } /* Literal.String */
+.highlight .na { color: #4f9fcf; } /* Name.Attribute */
+.highlight .nb { color: #78A4EB; } /* Name.Builtin */
+.highlight .nc { color: #FE5470; } /* Name.Class */
+.highlight .no { color: #FE5470; } /* Name.Constant */
+.highlight .nd { color: #99f; } /* Name.Decorator */
+.highlight .ni { color: #999; } /* Name.Entity */
+.highlight .ne { color: #c00; } /* Name.Exception */
+.highlight .nf { color: #E9EDED; } /* Name.Function */
+.highlight .nl { color: #99f; } /* Name.Label */
+.highlight .nn { color: #0cf; } /* Name.Namespace */
+.highlight .nt { color: #2f6f9f; } /* Name.Tag */
+.highlight .nv { color: #033; } /* Name.Variable */
+.highlight .ow { color: #000; } /* Operator.Word */
+.highlight .w { color: #bbb; } /* Text.Whitespace */
+.highlight .mf { color: #F77669; } /* Literal.Number.Float */
+.highlight .mh { color: #F77669; } /* Literal.Number.Hex */
+.highlight .mi { color: #F77669; } /* Literal.Number.Integer */
+.highlight .mo { color: #F77669; } /* Literal.Number.Oct */
+.highlight .sb { color: #A9CC7F; } /* Literal.String.Backtick */
+.highlight .sc { color: #A9CC7F; } /* Literal.String.Char */
+.highlight .sd { /* Literal.String.Doc */
+  color: #A9CC7F;
+  font-style: italic;
+}
+.highlight .s2 { color: #A9CC7F; } /* Literal.String.Double */
+.highlight .se { color: #A9CC7F; } /* Literal.String.Escape */
+.highlight .sh { color: #A9CC7F; } /* Literal.String.Heredoc */
+.highlight .si { color: #a00; } /* Literal.String.Interpol */
+.highlight .sx { color: #A9CC7F; } /* Literal.String.Other */
+.highlight .sr { color: #3aa; } /* Literal.String.Regex */
+.highlight .s1 { color: #A9CC7F; } /* Literal.String.Single */
+.highlight .ss { color: #fc3; } /* Literal.String.Symbol */
+.highlight .bp { color: #366; } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #033; } /* Name.Variable.Class */
+.highlight .vg { color: #82b1ff; } /* Name.Variable.Global */
+.highlight .vi { color: #033; } /* Name.Variable.Instance */
+.highlight .il { color: #f60; } /* Literal.Number.Integer.Long */
+
+.css .o,
+.css .o + .nt,
+.css .nt + .nt { color: #999; }
+
+
+
+
+
+
+
+
+
+
 
 body {
   background-attachment: fixed;
